--- a/source/_posts/2013-06-15-india.markdown
+++ b/source/_posts/2013-06-15-india.markdown
@@ -1,33 +1,163 @@
 ---
 layout: post
-title: "India"
+title: "India Acclimatisation"
 date: 2013-06-15 17:24
 author: 
 categories: 
 description: 
 priority: 0.5
 ---
-Arrived late with an airport transfer, the roads of india didnt seem too crazy at that time of night, or at least no worse than Vietnam or Cambodia. Checked into the hotel, shown up to my room. straight to sleep that night.
+I arrived in Delhi quite late at night, about 1am, and was glad to have an airport transfer. The roads of India didnt seem too crazy at that time of night, or at least no worse than Vietnam or Cambodia; how little did I know back then. I checked into the hotel and went straight to bed.
 
-woke the next day and went out in search of an ATM so I could get some Rupees and some breakfast. The ATM was easy enough, although the max withdrawal was less than AUD$200, another win for my overseas fee free credit card. I'd hate to be getting socked with $5-10 foriegn ATM fees for every $200 I needed.
+I woke the next day and went out in search of an ATM so I could get some Rupees and some breakfast. The ATM was easy enough, although the maximum withdrawal was less than AUD $200, another win for my overseas fee free credit card. I'd hate to be getting socked with $5-10 foreign ATM fees for every $200 I needed.
 
-Breakfast wasnt so easy to find. The area the hotel was in, Karol Barg, seemed to be mostly closed, which seemed a bit annoying in a country where it's so hot to be shut for the coolest part of the day. A persistent "guide" and his auto-rickshaw driver finally wore me down after following me for about 15 minutes while I walked and failed to find anywhere open with food. They took me to a south indian street food place where I had dosa and vegetable curry, which was actually really good, so I decided to stick with them for a while. That turned out to be a mistake, they took me to a shitty "handi-craft" market.
+Breakfast wasn't so easy to find. The area the hotel was in, Karol Barg, seemed to be mostly closed, which seemed a bit silly in a country where it's so hot to be shut for the coolest part of the day.
 
-maybe it wasnt shitty, but I just honstely dont give two shits about handi-crafts, and even less so about stuff so generic that you could say it was from anywhere in south east asia. I did a quick walk through, still trying to be polite at this point, but really just wanted to get out of there. I went back out to the rickshaw and asked them to take me to a real market, you know, with like the baskets of spice and stuff that might make nice photos. The drove me to another shitty tourist shop (writing market on your sign doesnt make it a market), I was getting fed up with it at this point and didnt even get out of the tuk tuk and asked to be taken somewhere I could have a chai. They instead took me to the tourist travel agent to get a free map, which the guy inside told me cost 500 rupees, so I left empty handed. The rickshaw then took me to "a great place for tea", which was another air conditioned tourist shop selling dried tea. I got fed up and told the guide to stop wasting both our time with tourist traps as I was flat out not interested, take me to the sort of place where he would actually drink chai of a morning. I think he got a bit pissy but the rickshaw driver seemed to get it and walked with me down the street 100m to a little hole in the wall where we had tiny little cups of chai masala. it was very yummy, but the shot size plastic cups were not exactly satisfying
+A very persistent "guide" and his auto-rickshaw driver finally wore me down after following me for about 15 minutes while I walked and failed to find anywhere open with food. They took me to a south Indian street food place where I had dosa and vegetable curry, which was actually really good, so I decided to stick with them for a while and have them show me around. That turned out to be a mistake, they took me to a shitty "handi-craft" market.
 
-met up with guide and the one other person starting the tour, Nicolle. We were briefed on what was planned for the next 2 weeks, filled out some forms and had an early night.
+Maybe it wasn't shitty, but I just honestly don't give a damn about handi-crafts, and even less so about stuff so generic that you could say it was from anywhere in Asia. I did a quick walk through, still trying to be polite at this point, but really just wanted to get out of there. I went back out to the rickshaw and asked them to take me to a real market, you know, with like the baskets of spice and stuff that might make nice photos. The drove me to another shitty tourist shop (writing market on your sign doesn't make it a market), I was getting fed up with it at this point and didn't even get out of the tuk-tuk and asked to be taken somewhere I could have a chai. They instead took me to the tourist travel agent to get a free map, which the guy inside told me cost 500 rupees, so I left empty handed. The rickshaw then took me to "a great place for tea", which was another air conditioned tourist shop selling dried tea. I got fed up and told the guide to stop wasting both our time with tourist traps as I was flat out not interested, take me to the sort of place where he would actually drink chai of a morning. I think he got a bit pissy but the rickshaw driver seemed to get it and walked with me down the street 100m to a little hole in the wall where we had tiny little cups of chai masala. It was very yummy, but the shot size plastic cups were not exactly satisfying
 
-next day we went on a tour of the old city, saw some mosque where they wouldnt let nicole in and you had to pay $12 to take in a camera, so I went in by myself for about 5 minutes and left. We went to a sikh temple, learned about how they dont cut their hair or beards because they believe it shows their wisdom, and how big turbans are full of lots of hair. We then had breakfast in a little parantha shop that made some amazing food. I had a cashew nut parantha and it was really something special.
+That night I met up with the tour guide, I guy from Udaipur named Mayan, or "Moon" the English translation of his name, and the only other person starting the tour, Nicolle. We were briefed on what was planned for the next 2 weeks, filled out some forms and had an early night.
 
-In the afternoon Nicolle and I  went in search of snacks for the overnight train, and made a trip to the police station to make a report about nicolle's camera that was stolen from her the day before. That night Moon took us to the train station where we boarded our overnight train where we had 3 beds out of a 6 berth sleeper carraige with a few regular indian people in the other beds. For at least the first few hours the food and drink guys were constantly walking up and down the isle saying "Chai, chai, chai! garam chai!" (Hot tea) or "Omlette, Omlette, Omlette" and made it seem a bit pointless having brought our own snacks.
+next day we went on a tour of the old city, saw some mosque where they wouldn't let Nicolle in and you had to pay $12 to take in a camera, so I went in by myself with no camera for about 5 minutes and left. We went to a sikh temple, learned about how they dont cut their hair or beards because they believe it shows their wisdom, and how big turbans are full of lots of hair. I guess I have good beard wisdom, but not so good hair wisdom :P
 
-I got a pretty decent nights sleep and in the morning (running a few hours late) we arrived in Varanasi. We checked into our hotel and took some time to freshen up.
-went and ate lunch at a very tasty restaurant, then walked down to the ghats. nicolle and moon went back to the hotel to relax, I decided to explore a bit.
+We then had breakfast in a little parantha shop that made some amazing food. I had a cashew nut parantha, a flat bread stuffed with cashews served with some vegetable curries, and it was really something special.
 
+In the afternoon Nicolle and I  went in search of snacks for the overnight train, and made a trip to the police station to make a report about Nicolle's camera that was stolen from her the day before. That night Moon took us to the train station where we boarded our overnight train where we had 3 beds out of a 6 berth sleeper carriage with a few regular Indian people in the other beds. For at least the first few hours the food and drink guys were constantly walking up and down the isle saying "Chai, chai, chai! garam chai!" (Hot tea) or "Omlette, Omlette, Omlette" and made it seem a bit pointless having brought our own snacks.
 
+I got a pretty decent nights sleep and in the morning (with the train running a few hours late) we arrived in Varanasi. We checked into our hotel and took some time to freshen up.
+We went and ate lunch at a very tasty restaurant, then walked down to the ghats. Nicolle and moon went back to the hotel to relax, I decided to explore a bit more by myself.
 
+I saw some guys getting their head shaved on one of the ghats, my hair was over due for a shaving so I thought why not. I tried to ask how much a few times but they kept replying "yes, shaving!" as though they didnt understand English and I figured even if they tried to charge me 4x it would still be cheap. The guy rubbed some water into my hair (thinking back, maybe it was holy Ganges water... I really hope not), opened a new razor in front of me and put it in the straight razor and started shaving away. Once he was done shaving he started giving me a head massage, then arms, then another one of the guys there started massaging my other arm telling me how lucky I was to be getting massaged by two men. To be honest I wasn't really enjoying it and just wanted them to stop so I could go already. When they finally finished, suddenly the guy understood English much better and wanted 1000 rupees for him, and 1000 rupees for the other guy (about AUD$20 each). I told them no way. They gave me a spiel about how normal price for Indians in 800 rupees (completely shit), and more of them started crowding around. At this point I'm feeling a bit intimidated so I pull out my wallet, and give them all the money in the notes section of my wallet, which because I hide big notes elsewhere was only 300 rupees. Still a ripoff, but a much easier to stomach one. They're still not happy and want me to go to an ATM or to come with me to my hotel so I can get more money. At this point I'm starting to get pretty mad, but try and keep calm and tell them sorry but that all I'm giving you.
 
+Their tone suddenly changes and they say ok, and ask me if I'm happy. I tell them no, I feel like you've ripped me off. They then make me to do a chant with the "holy man" sitting under their umbrella, who puts a red dot on my forehead as some sort of blessing. Surprise surprise, I'm now told I have to make a donation for the blessing. I've had enough with keeping calm, I tell them they've already stolen all my money (a lie, but I have no qualms about lying to thieving liars) and I've had enough of their scamming, I stand up and storm off, half expecting one of them to follow me and rob me.
 
+I try and walk off my anger from being taken advantage of, but the chaotic streets of Varanasi aren't really a good setting for calming down so I end up getting a taxi back to the hotel, going for a swim and writing the rest of the day off.
 
+After meeting the rest of the group that night at dinner, we get up before sunrise and head to the Ganges for a sunrise boat ride. It's supposed to be a slow journey where we are taken down the river by the running water, but the light wind over-powers that and we stay pretty much stationary until after about 20 minutes of not moving the boat boys give up and turn on the boat engine and take us up the river past all of the ghats. A ghat is basically a set of stairs leading to water, from with the locals do many things including bathe, do laundry and cremate their dead. You're apparently not supposed to take photos of them cremating the dead, but then again women aren't supposed to show their shoulders in public either, so it's easy to get confused and group it with all the other silly conservative beliefs and decide that I'm not going to stop me from trying to get a good photo of it.
 
+After a quick Chai on the side of the Ganges when we get back, in single use disposable ceramic cups none the less, Nicolle and I decided to head to the monkey temple which as the name implies is home to a lot of monkeys. The temple was... a temple. But the monkeys were cute and awesome. Unfortunately you're not allowed to take cameras inside at all, which is a shame since I had zero interest in photographing their holy shrine of flaking paint, but would have loved to get some photos of the baby monkeys and their mothers.
 
+That evening we went on another boat ride where we attempted to float little wish boats down the river, but the wind again quickly extinguished everyone's wishes. India can be a cruel place.
+
+I ended up deciding I was overdue for a "weekend" the next day, and it was a day leading into an overnight train to be followed by the Taj Mahal and the Red Fort in Agra, so I chose to sit by the pool (accommodation on this tour was far fancier than I'm used to) and read for the day to relax and recuperate.
+
+The overnight train the second time around was a bit of an ordeal. We showed up at the station at 21:00, one hour before the train was scheduled to depart at 22:00, and were soon told that the train had been delayed a few hours, now expected at 00:00. We went into the upper class and sleeper class reserved seating area to sit and wait and found it was full of people sleeping on the benches. One of the guys checking people were allowed to be in there went around and woke some people up, clearing enough seats so everyone could at least sit down.
+
+We soon noticed what appeared to be rats lurking in the shadows underneath benches, occasionally making dashes in and out of the toilets. The toilets were a sight to not be seen. Wreaking of shit, the guys toilets consisted of three squats one of which had leaking plumbing that sprayed water at you as you first walked in the door, or went near the basin to wash your hands. How lovely!
+
+The station we were at is quite a busy interchange station, so pretty much every 5 seconds there was an announcement, each preceded by Microsoft's tada.wav sound. Not annoying in the slightest. I started watching my watch to measure the silence and got excited where there was no announcement for an entire minute! As 00:30 approached we got word there were further delays, and a later ETA, which when it came to be that time the train didn't show and we didn't get any new information. The guys who make sure that people in the waiting area are actually allowed there went home and suddenly the room was full of homeless people sleeping on the floor, even under the benches we were sitting on.
+
+Finally at 03:30 our train arrived and we boarded, only 5.5 hours later than planned, and only a few hours before we were supposed to be arriving in Agra, which obviously wasn't going to happen. Completely exhausted and out of patience from staying up so late, you can imagine how overjoyed we were to find a guy sleeping in one of our assigned beds, and used blankets and pillows in most of the remaining ones. A conductor kicked the guy out and sorted us out with new bedding and so we could finally get to sleep.
+
+Waking up the next day we were told the train was somehow now every later again so we probably wouldn't get to Agra until 16:30 so we'd be going to the Taj Mahal the next day instead, a fact that made Kim ecstatic as it meant we'd be there on her birthday!
+
+At 14:30 we suddenly had to get up and get off the train as we'd arrived near Agra early-late somehow. We were given the option to visit the Red Fort that afternoon which nearly everyone chose to do.
+
+It was a shocking day in Agra, with dark clouds looming, so it was no surprise at all when it started to piss down with rain soon after we arrived at the Red Fort and not stop while we were there. The fort itself was an amazing building, and even seeing it under such awful conditions everyone still really enjoyed it and I personally found it way more impressive and interesting than the Taj Mahal.
+
+That night back at the hotel we met the final two additions to our tour group, Brad and Brad from Sydney and Melbourne.
+
+The next day we got up extremely early and headed to the Taj Mahal. We were pretty much the first people there which gave as a great opportunity to get some nice photos without too many people in them. I found the Taj to be pretty impressive from a distance, but it didn't really have much more to it after that initial impression. I'm glad we got delayed the previous day, as I don't think my impression of the Taj would be as good as that of the Red Fort if we'd been to see it in the heavy rain.
+
+Because of the previous days delays we didn't get the local bus that was on the schedule and instead got some private cars; definitely a bonus for what turned out to be a 6 hour drive to Tordi Garh, the old Palace in Tordi Village.
+
+We were greeted by the "royal" owner (maybe he was a prince or something? King doesn't sound familiar) and had a nice buffet dinner and drinks to celebrate Kim's birthday. I was sharing a room with one of the Brads, and not long after going to bed he started to lose his balance and get vertigo every time he laid down and started to freak out a bit exaggerating that he probably had a brain clot or something, so he went off to see our tour guide and came back 10 minutes later looking quite paniced, and told me he was being taken into Jaipur hospital. We're told he was ok, but he'd gone back to Delhi to head home so we didn't really get to spend much time with him in the tour group.
+
+In the morning I got up early with a small group and we walked up the hill behind the palace to the site of the old fort to have a look, see the view and have some chai and biscuits. It was a surprisingly challenging walk, from the ground it looked like a 10 minute stroll, but it ended up taking an hour, and the humidity was so high that every inch of fabric I was wearing was drenched in sweat by the time I got back down to the palace.
+
+After getting back we went for a walk through Tordi village guided by the royal dude. Tordi is a tiny little village a few hours outside of Jaipur; small enough that tourists coming to visit still cause the kids to crowd around excitedly, asking for "one photo" with their friends and siblings so that they can shyly look at themselves on the screen afterwards. I think in the whole time we were there I didn't get asked to buy anything even once, nor did I see a single piece of touristy crap for sale.
+
+It was explained to us how the money raised by allowing people to stay at the palace and from the meals served there is used to help keep the town going, and how they discouraged giving the children lollies or money so that they don't start expecting it, and preserve the awesome vibe the place currently has.
+
+We made the drive back into Jaipur and checked into our hotel which was full of winding corridors and stair cases making it an interesting walk from the front door to the rooms that probably took more than 5 minutes.
+
+We went on a quick tour around Jaipur to get our bearings, then headed to the local movie theatre to watch the current big Bollywood hit, "Javani Hai Deewani". The theatre itself was a very impressive building, especially on the inside, it felt like a palace. The movie was visually very colourful and entertaining to watch although I was surprised by how few songs there were; it was a 3 hour epic (with intermission) but I think there were only 3 songs in the whole thing. It was a bit tricky to follow what was happening at times since none of it was in English.
+
+I went to the toilet in the intermission and it was nuts. I think I've been in mosh pits less crowded than that tiny room was.
+
+The next day we headed to the Jaipur palace, home to a king with 100 wives to look after his needs. There was a courtyard where him and his many wives would party, all but his first wife who had to stay in a room separate from the others and could only watch. It seemed like a pretty shitty deal for that first wife.
+
+We had our last dinner with the larger tour group that night at a rooftop restaurant that's speciality was meat. I had a plate of various BBQ'd meats and it was delicious.
+
+The next morning half the tour group boarded a train heading to Delhi to finish up their tour, but the 4 of us staying on and Moon went and got a local bus heading to a little village called Nimaj Bagh. The place were were staying was an old palace turned into a hotel, with beautifully painted trims on all the doorways, arches and windows. The place also had a pool which we hung out in all afternoon, making the heat a whole lot more bearable.
+
+We got taken on another village tour, which was quite similar to Tordi Garh, but there was a tiny bit more evidence of western influence and capitalism here, in the form of a few more general store type shops and one place selling tourist trinkets. The kids, however, were just as beautiful and innocent, wanting little more than to see themselves on the screen of our cameras.
+
+We also visited a temple that was decorated with carvings from before the time when Muslims had stated to influence India, with lots of carved women wearing nothing more than a sarong around their waist. It's actually a bit sad to think about the impact Muslimism has had on India today. People are shocked and offended if a woman wears a singlet exposing their shoulders. The country responsible for the inception of the karmasutra is today inhabited by a generation of men who act like primary school boys, titillated by asking if you've had "the sex" with your past girlfriends and wanting to high five you. Quite frankly it's really sad to see a country that was once so far ahead of the curve in sexual liberation, today being sexually retarded and ridiculously conservative. It even seems from news events in the past little while that apparently rape is to be expected if you don't dress "appropriately"; apparently the lack of exposure to women's shoulders and lower thighs makes you less able to tell that a women showing some skin isn't asking you to have sex with them. Who would have known!?! End rant
+
+That evening we drove out to a hill with a lovely view of the sunset, where we had some chai. After the sun set we briefly went to a nearby lake and watched animals before it started to rain quite heavily and we headed back to our jeep and did the sides up before heading back to the hotel for a good nights sleep.
+
+From Nimaj Barh we headed to Jodpur, India's blue city. In the old town buildings are pretty much all painted indigo blue, apparently because it keeps the mosquitoes away. We spent the day exploring the Jodpur fort, which was fort-like, with Jodpur influences. Can you tell that my bullet point notes are lacking detail and my memory is failing?
+
+That night we went to a local bar called Rocks bar, where I tried a bunch of local whiskeys, most of which were pretty alright, followed by a bunch of dancing which even in a very drunken state I had a lot of trouble getting into. Oh, and some local guy serving for the navy asked me to go home with him after the music stopped... just your usual night our in India.
+
+The trip itinerary said the trip to Udaipur was by local bus, but we decided as a group that we'd done local buses already and would be happy to pay more to be able to make toilet stops wherever we pleased, and save a bunch of time. It also meant we'd be able to stop at a large Jain temple, the religion that our guide loosely follows. It's an interesting religion in that it's followers are supposed to shun technology; it's monks take it to extremes and only walk to get around, even bikes are apparently to much technology. I'm told that it means the religion hasn't spread very far around the world, simply because it's preachers won't board planes so can't easily spread their beliefs in other countries.
+
+During the drive it was very interesting to see how the landscape changed, starting off extremely dry and desert like, then becoming mountainous and rocky for a while, trailing into lush green rolling hills.
+
+We finally arrived in Udaipur in the late afternoon and drove around the narrow hilly streets of the old city, where we went up lane way only wide enough for one car. As luck would have it a car was coming the other way and we had to back back down to the T-intersection to let it pass. Helpfully cars coming from the other two directions drove right up to our vehicle, stopped and every starting beeping their horns. Cars and tuk-tuks banked up behind them in both directions while impatient motorcycle rides forced their way through the narrow gaps. There was a lot of shouting, and a silly amount of horn usage as though they believed we were unaware they wanted to get past, and they didn't realise that other self-centred idiots had blocked us in from every side so until one idiot yielded, nobody was going anywhere.
+
+Eventually cars and tuk-tuks manuvered enough for us to get out of the way of the car coming down the road we wanted to go up, and we did a loop around to the hotel where we were again impatiently honked at by a taxi while we got our bags out.
+
+With how impatient everyone on the roads seems to be, how little consideration people seem to have for how their actions are making things worse, and just how bullshit crazily people seem to drive, I'm honestly surprised that I didn't see any real road rage. Everyone is in a needless hurry, but people seem to keep their cool pretty well.
+
+After checking into our hotel we took a quick walking tour of the surrounding area, and then went on a sunset boat cruise on the lake that took us out past the two "floating" hotels that looked very upmarket. Our guide invited us to come to his home for dinner that evening, where his wife and grandmother had prepared a divine selection of curries. Moon insisted that it was custom for guests to eat before the hosts, so we dug in as they brought the various dishes out, and his little old grandmother who didn't speak any English kept sneaking more naan onto our plates. Desert was goolab jamun, delicious doughy balls soaked in rosewater syrup.
+
+While in Udaipur we did a tour of the very beautiful palace, took the cable car up to a lookout where the girls were swarmed by Indians who wanted to take a photo with them (a few even asked me, it was like they'd never seen white people before), and took in a show of traditional music and dancing one of which involved a woman dancing with an ever growing stack of pots balanced on her head.
+
+One morning we were booked in to do a cooking class but I felt extremely nauseated during breakfast and decided food preparation was probably not the best idea. By lunch I was feeling fine again and came to the conclusion that the nausea must have been caused by the doxycyline I'd taken that morning on an empty stomach, an amateur mistake.
+
+I spent the morning doing research into how to spend my time in South Africa and found a budget tour from Johannesburg to Botswana, which nearly fitted into the time I was there but started a day early. I made some enquires about changing my flight and if there was an seat on the tour, and was soon off trying to get a refund on my overnight train ticket and booking flight to get me to Mumbai sooner to give me a little extra time there.
+
+Moon and the girls still on the tour said our goodbyes and they headed off to get their overnight train back to Delhi, while I stayed on in Udaipur for a few extra days.
+
+On my first morning alone in Udaipur I went for a bit of an aimless wander around, and ended up at the zoo, which with my typical travel luck, was closed that day. I had a bit of a walk around the gardens surrounding it which were very nice, and sat in the shade reading a book for a few hours.
+
+I took a very round about walk back into town and stumbled across quite a long street market which was full of colour and activity, so I spent quite a while taking photos.
+
+I organised a taxi up to see the monsoon palace for sunset, right up on top of the hill overlooking Udaipur. The views of the city were fantastic, but the gloomy overcast afternoon made the sunset into a non-event.
+
+The next day I went back to see the zoo on a day that it is open, and instantly regretted coming. The few animals they had were in painfully small cages, which wreaked of shit; atrocious conditions that made me feel very sorry for the animals.
+
+That afternoon/evening I got my flight to Mumbai on Air India. I've already ranted about how horribly over-the-top bureaucratic the whole thing was (here)[], but one thing of note that I didn't look into until after I landed safety was Air India's safety record. I found (this article)[] claiming they are the 3rd least safe airline in the world, ignoring the ones so unsafe they don't count. Who needs bungee jumping when you've got dangerous airlines to travel with.
+
+I got a taxi from the airport to a hotel recommended in the lonely planet (I had nothing planned when my flight took off, so the lonely planet was my only real option), and it was this cute little old school style taxi, just like in old movies, with a bench seat across the front and a roof so low my head nearly touched the roof.
+
+When I arrived I found out that that hotel was full, but a helpful guy looking for a tip helped me find  a place around the corner that was nice and cheap, that was just a floor full of tiny shoebox private rooms, probably 1.5 metres by 2 metres. Good enough lodgings to spend a night, but the bathrooms were so horrible I didn't wasn't to stay more than the one night.
+
+I was hungry for some dinner so I went for a walk to find that just about everything around seemed to be closed already at 11pm, but after walking past hundreds of shut shops, I found Leopold Café from the book "Shantaram", which saved me from having to stoop to visiting the golden arches I could see in the distance. The place for much larger and far busier than I had imagined it to be, with a whole team of waiters decked out wearing "Leopold" uniforms. I had a pretty nice curry there, then headed back to my shoebox to sleep for the evening.
+
+I spent the next morning searching for a nicer hotel that I could afford and found a place that had a bit of an old mansion feel to it. I had a look at the room, it looked pretty nice and had an air conditioner so I agreed to stay, but later when I went to turn on the AC I was disappointed to find there was no power to it. I asked at reception about it and they told me it was an option extra which I wasn't very happy with, especially since there was no fly screens on the windows. I ended up deciding that I didn't really need the AC, and lucky for me there didnt seem to be any mosquitoes in Mumbai.
+
+After sorting out my room, I went and looked into booking a tour of the slums with a company that had been strongly recommended that used the money raised to run a school in the slums to educate the kids there. I was lucky and there was a tour leaving that day in about an hour, so I booked in and went home to change from my flip-flops into closed shoes.
+
+It was a very interesting tour, showing how much industry goes on there from plastic recycling, where they sort the plastic by quality and colour and melt it down to make long strands which are cut into pellets to be shipped off to other countries to be made into all sort of stuff, to fabric recycling where old fabric is shredded and the fibres are spun into a thread which is then turned back into fabric, to burning off the paint from old oil drums and banging them back into shape to be repainted, refilled and reused. Apparently there are a few people making a ton of money from the slums, while the people who work and live there are in extreme poverty. A lot of the people actually sleep at night in the same factory that they work in during the day.
+
+We were taken down a "lane way" that would have been only about the width of my shoulders and required us to bend down not because of a low roof, but because of low power lines, along which there were hundreds of tiny rooms each inhabited by a family. At one point we went past an area our guide had described as an open field used by the locals as a toilet. What it looked like, however, was a huge mound of garbage with some kids playing cricket on it not 10 metres away from another kid squatted down taking a dump. Lovely!
+
+The next day I took a boat to Elephanta Island, to see the cave temples carved out of the side of the hill. The boat ride there was pretty choppy on account of the extremely high tides. I had a sea sickness table beforehand so I was fine, but there were a lot of Indian women throwing up onto the side of the boat. That's not a typo, they weren't managing to get it over the edge in the slightest.
+
+The steps up to the cave were lined on either side by stalls selling the generic tacky souvenirs available everywhere in India, and roofed with blue tarps that did little more than stop any change of a breeze to ease the humidity. I dont know how many people come all the way to Elephanta Island to buy their tacky jewelled elephant, or how they would pick any of those hundred basically identical stalls over another, but the shopkeepers obviously think it's worthwhile.
+
+The first cave was quite impressive, with huge chambers carved from the mountain with lots of statues carved into the walls, but the other unfinished caves were less impressive, and finding a part where the "stone" had fallen away to reveal steel concrete reinforcing made me wonder just how authentic the whole place was.
+
+The boat back seemed to take a lot longer than the boat there, with a few burst of monsoon rain, so I didn't end up getting back until late in the afternoon and didn't do much else that day.
+
+My final day in Mumbai, and in India, was pretty packed full of stuff. I had a look through the museum in the morning before heading out to the ??? dobi ghat, a huge open air laundry, full of little troughs of water where people bash clothes clean, roofs covered in clothes lines and sheds where they boil water for the washing. It was an interesting place to visit, and explained why hotel laundry in Mumbai needed to be dropped off so early in the day.
+
+After the Laundry, I walked down towards the Hali Aji Mosque, which is out on an island connected to the mainland by a long concrete walkway, with toxic bombay water full of garbage on either side. I should have turned back when I noticed everyone coming back from the mosque was soaked from head to toe, but instead I took my chances and decided to try and time it right so I could get out to the mosque dry, timing my movement between waves. That was foolish and about half way out I got stuck in a crowd when a large wave hit the concrete wall, splashing up and soaking everything I was wearing with filthy water. It's a damn good thing I had my phone and camera in my dry bag at the time!
+
+I turned back without even getting to the mosque, and as I was leaving some heavy rain started to fall. While people ran for cover, I tried to find somewhere completely uncovered and took my hat off to try and get a bit rinsed off by the rain.
+
+Next I headed to the Gandhi museum, which in typical fashion was closed that day for pest spraying, so I headed down to nearby Chowpatty beach instead. There was a roped off area along the shore that I asked a local about, and was told it was there to stop people getting sprayed with the toxic seawater from waves... So it sounds like the water pollution issue isn't over-exaggerated at all.
+
+I saw some kids jumping of a higher bit of sand doing flips and stuff, that I watched for a while before they dragged me over to sit with them and asked me questions and wanted me to take photos of them so they could see themselves.
+
+On my long walk along the coastline, back to where I was staying, I was hit by some more dark clouds and heavy rain that I welcomed with open arms. It's amazing how getting covered in filthy toxic seawater can change you opinion of how annoying monsoon rain is. I just walked along with a grin on my face, watching people run for cover when there was absolutely no cover to run towards.
+
+I decided I needed a shower before I headed to the airport; I asked at my hotel but they told me there was no shower that I could use, so I went to a hostel around the corner and asked them how much it would cost just to use a shower. They ended up only charging 100 rupees, and I was happy to get cleaned up and changed into some clean clothes.
+
+My taxi driver for the drive to the airport had Bollywood tunes that I could actually recognise playing on the radio, a fitting way to finish up my time in India.
+
+I feel I will definitely be coming back at some point, probably in winter, well away from the monsoon. I can completely understand why the place is so love/hate with people. There's a bunch of things about the place that frustrate and confuse me, but the colourful nature of the place, the amazing food and the friendly people (who aren't trying to sell you shit) have won me over.
