--- a/source/_posts/2013-09-26-kenya.markdown
+++ b/source/_posts/2013-09-26-kenya.markdown
@@ -1,113 +1,121 @@
 ---
 layout: post
-title: "Kenya"
+title: "Kenya "
 date: 2013-09-26 16:18
 author: 
 categories: 
 description: 
 priority: 0.5
 ---
-KENYA POST
-crossing into kenya, trouble getting the truck in. make lunch at the border. start playing cricket at the border, drew a crowd of truck drivers watching and trying to catch long shots.
+So after we left Tanzania we were destined for Kenya to visit the Masai Mara, however we had a little bit of trouble getting into Kenya. Everyone's visa got sorted out nice and quickly, but there was some sort of hold up involving the truck. Something to do with the truck's registration being changed over from English to Namibian and us not having the right [Carnet de Passage](http://en.wikipedia.org/wiki/Carnet_de_Passages) to go with it.
 
-3 options, leave the truck, pay a bond for the value of the truck (bond that you dont get back, luckly the truck is on the books as being worth $4k, instead of the 100K+ it would be worth) or pay a bribe
+To make better use of the time, we set up to make lunch there at the border then after eating some of the group started having a game of cricket! The spectacle drew a crowd of truck drivers watching and trying to catch long shots.
 
-eventually we were able to pay a bribe of $300 to get the paperwork fudged.
+After a while Steve filled us in on things, apparently the registration was changed over a long time ago and the truck had been in and out of Kenya a bunch of times since then, but in the book they had always used the old rego, but because the border officials are so damn ethical they couldn't do that for us that day.
+
+There were three options that he thought might get us out of our pickle:
+
+1. We leave the truck and sort out other transport to Nairobi, and then hope the Carnet gets sorted out while we're in the Masai Mara (using smaller safari Land Cruisers again).
+2. We pay a bond for the value of the truck, but apparently bond in Kenya don't work like real bonds; it's basically sunk money that you never get back. Luckily the truck is on the books as being only worth $4k, instead of the probably 100K+ it would truly be worth. Still not a great option, we would need to dip into the kitty to cover it.
+3. We pay a bribe to have the entry in the book made with the old registration like every other time.
+
+Eventually  after about 2 hours, we were able to pay a bribe of $300 to get the paperwork fudged by that very ethical and totally not corrupt border official. Of course the bribe had to be negotiated by our Kenyan cook Charles, because they were scared of dealing with Steve, who's a white guy and can look mighty pissed off when he's not happy.
+
+And so from the very start we were exposed to the best of Kenyan corruption, and it wouldn't be our last Kenyan bribe either.
+
+The traffic coming into Nairobi was super congested; it took us hours to go what was probably only 20kms. So slow in fact, and with nowhere to stop, that someone on the truck could hold it no longer and needed to pee in a bucket! Fun times!
+
+We stopped at Galleria shopping center to shop for supplies and buy some dinner in. My first impression of the Kenya based on this mall was that it's a lot like South Africa. Everything seemed clean and modern, and generally much more developed than anywhere we went in Tanzania. It turned out however that a shopping mall is not very representative of a country; who would have thought it?!
+
+The next morning we again left the truck behind and split up into safari 4WDs, this time with our whole Melbourne crew "Team Toto" in the same vehicle! Things were actually pretty disorganised, our driver didn't even know he was driving that day so he showed up quite late and had to stop to meet his wife along the way to get some clothes for the trip.
+
+After a few hours drive we stopped in a small town near the Masai Mara to fuel up with diesel, expect every single service station in town was bone dry. We were actually pretty lucky in that we only waited for 2 hours for one of the stations to get refueled; Apparently the car at the front of the line had been waiting 2 days for fuel!
+
+The road leading into the Masai Mara was a very poorly maintained dirt road, bumpy to the point where it just felt like we were driving over huge corrugations. That certainly didn't mean we had to drive along it slowly though, all the Land Cruisers flew along it at 90-100kmph and feeling like we going to fly off the road at any moment. It probably didn't help that our car was 30 years old and felt like the suspension was all the original parts that came with the car :P
+
+At one point we slowed down to a stop, our driver spoke with another driver for a bit and then let us know that the brakes had failed. Excellent! We went to continue anyway but then the car wouldn't start and we needed a push to get going again, thankfully a whole lot slower now that we weren't able to stop ourselves.
+
+We drove to the park gate where they sorted out a replacement vehicle for us to go off in that afternoon while they got our one fixed up, so at least we didn't entirely miss our afternoon game drive.
+
+Now if your thinking, "Gee, that sounds like a pretty shitty day" you'd be right at this point. So many things had gone wrong I was going to be happy to just go to camp and forget the game drive, but I'm incredibly glad we ended up going because those 1-2 hours in the park that afternoon completely salvaged an otherwise terrible day and left us in good spirits for the evening!
+
+We drove straight in to where a lot of cars were following a leopard that was walking around near some bushland. It felt a bit like a circus with so many cars circled around with so little respect for the animals personal space. Where in the Serengeti the drivers stick to the roads and you get to see what you can see from there, in the Masai Mara it's a free for all and they drive you right up to things. Literally only 2-3 meters away, which honestly felt like we were getting way too close, but it made for some fantastic photos. It did mean that when the leopard glared in our direction, it really felt like it would just jump in the vehicle and kill the lot of us.
+
+After the leopard got fed up with the circus and went into hiding we raced off and very briefly saw a cheetah sitting in too long a grass to really see much, so then we shot off again to see 2 lionesses & 6 cubs playing. Again we got right up close, front row seats, and turned the engines off. Up that close in near silence it was possible to forget the media circus that you were part of and really just enjoy watching the lion cubs play. It was beautiful!
+
+After about 15 minutes, all of the circus suddenly started their engines and we all raced away back to the road. Our driver told us that they'd heard that park rangers were on there way over and we wanted to get away without getting a "big fine" of 10,000 Kenyan Shillings, or about USD$120.
+
+The penalties for venturing off the roads are much lower in Kenya, compared to Tanzania. In Tanzania the drivers would loose their licence as well as get a large fine, and hence be unable to work anymore, so in Tanzania everyone stays on the road. But in Kenya there's only the monetary penalty which they just pass on to the customers anyway, which is why they're willing to break the rules and go way off-road in the Masai Mara.
+
+I'm in two minds about the whole thing. On one hand it made the place feel a lot more zoo like, or that we were all just a part of some horrible media paparazzi, and if our driver had stayed back on the road it would only really be disadvantaging ourselves because no-one else was and they'd all get in the way of us seeing anything at all. But on the other hand it felt incredibly special getting up so close the animals, and as Steve pointed out, it's been like this for so long that the animals have never known it any differently so they're not at all phased by the cars.
+
+Back at the campsite we happily drank some beers and recounted all the cool stuff we'd seen that afternoon and you would never have even known that it was the same day where all that stuff went wrong! The campsite had permanent tents for us to stay in so we didn't even have to set up tents that night, a huge luxury for us!
+
+The next morning we were up early to get in the gate as soon as the park opened, on a hunt to find more big cats and the shining sun made for a great day for just that. From a long way away we spotted a lioness trying to hunt a bird and failing miserably, but it was actually really close to where the lions were the day before, so we headed over to investigate.
+
+Once we were closer we found a big male lion just sitting, being all majestic in the sun, and over behind him there were 2 lionesses eating and occasionally fighting over some sort of animal carcass.
+
+All of a sudden the females stopped what they were doing and stared in our direction. I was thinking, "Shit, what have we done? They look mean and are probably going to eat us now" but it turned out they were looking past us. A long way past us in fact, where probably 1000 meters away there was a large herd of wildebeests. At first none of us thought they could actually be what they had stopped so suddenly over, but then one lioness and the lion set off down a gully that seperated us from the herd and then reappeared on the other side and continued towards them.
+
+We sped off the long way around the gully and then follow the two lions as they chased the heard and split it in two, then changed targets and chased after a different herd several more times, but never actually making an attack while we were watching.
+
+We gave up on seeing those two hunt and ventured back to see what the others were doing, and we find 2 other lionesses with the cubs with at least 2 dying wildebeests in the large grassy plain, both still occasionally kicking.
+
+The lions were all focused on one wildebeest, and the circus of cars circled around to watch the lions and sort of gave the other wildebeest some cover. After several attempts it somehow managed to get back on its feet and tried to make a break for it, but somehow even through all the vehicles the lions spotted it and chased it down again to kill it. Sadly we missed the crucial moment because other cars pull in and obscured our view, but we did get to see the very end of the predation with the lion going for the wildebeest's neck.
+
+We drove a long way further into the park, well away from the thick swaths of vans that you don't seem to be able to get away from near the main gate and saw plenty of cool small stuff and big stuff. An baby giraffe and it's mum, hippos lazing in the river while crocodiles slept on the bank.
+
+It seemed like we had probably seen all the big cats we were going to see that day, as they normally like to laze around in the sun in the warm afternoons, but today we got luck and saw even more cats in the afternoon!
+
+We noticed a lone car quite a long way from the road and went over to investigate and were pleasantly surprised to find four cheetah on sitting around a rock, and as we pulled up the other car left and it was just us and the cheetahs! It was marvelous, but being the only car there made our driver nervous (much more likely to be fined when you're breaking the rules by yourself I guess) so we only stayed for a few minutes.
+
+We went back to see what another car from out group was looking at and arrived just as another pair of cheetahs disappeared into the long grass! Our drivers had a discussion and we turned around to take the other car back to see our four cheetahs, and boy am I glad we did!
+
+When we got back there they had moved a bit further on and looked to be staring quite intently at something in the distance. We spotted a lone warthog and got excited that we might get to see some hunting, and sure enough two or three of the cheetahs started running towards it. But to our surprise, suddenly a whole lot of grass started to rustle and we could suddenly see  there was a whole pack of warthogs that were suddenly running for their lives!
+
+The cheetahs managed to split one off from the pack and we were sure one of them chasing a lone warthog was going to get it, but in a split second the warthog went into long grass and the next thing we saw was like a Benny Hill movie and they were not running in the opposite direction with the warthog chasing the cheetah! I guess he must have remembered that he had bad ass big tusks and could just as easily gut the cheetah as it could chase him down. And so both the warthog and the cheetah both lived to see another day.
+
+On top of the cheetahs, Leigh managed to spot a lion sleeping by the waterhole, as in actually spotted the animal itself as there were no other vehicles around it. It was certainly waaaaaay nicer on these occasions where it felt like it was just us the and animals as opposed to the circus that went on elsewhere
+
+On our last morning we were up early again for another sunrise game drive, and within about 10 minutes of entering the park we came across an absolutely huge herd of elephants. There must have been at least 40 of them roaming around together. Magical!
+
+After some more driving around we found two bloody mouthed lions eating something they had killed with two small cubs, but they were in quite long grass with a paparazzi of people around them and we'd seen such awesome lions the day before we ventured on in hope of seeing something better.
+
+We spent most of the morning in search of Rhinos to complete the big five, but unfortunately even after hours of driving we didn't seem much beyond the few random carcasses on the side of the road and a few jackal.
+
+The morning ended with a bit of a kufufle between Steve and the drivers about the game drive ending earlier than it was supposed to, and our driver not putting in the time to go look for some wild dogs one of the other vehicles had spotted. It was a real shame to mar what had been a pretty amazing few days in the Masai Mara by ending this way, but  I guess these things happen.
+
+The drive back out to the bitumen road felt even longer and bumpier and bumpier than the way in and there was a cheer in the car when we were finally back on sealed roads, and could start making better time for the long drive back to Nairobi.
+
+That day marked the end of that leg of the tour, and hence the start of the next leg: The gorilla loop! We were sad to lose some of our truck buddies and our fantastic cook Charles, but there were new people waiting to join us back at camp and our new cook Mash who turned out to be just as much of a wizard in the camp kitchen as Charles was. It was mind blowing the quality of the meals prepared in a kitchen that got setup and packed down into a few plastic tubs every day, and for 25 people each meal too. I have to hand it to Dragoman, they pick their crew very well!
+
+Some of us went out for dinner at Carnivore, a quite famous restaurant in Nairobi that gained it's fame by running an all you can eat grill with all sorts of exotic game meat. The place felt like some sort of movie world-like theme park, with the waiters dressed in very flary garb and the adjoined night club cranking out loud music, it was very surreal to be at a place that felt like it would fit in well in Hollywood, but to know you were actually in Kenya.
+
+Unfortunately none of us had done our research very well, and so didn't know that Kenya had banned the sale of game meat quite a few years ago, and that the most exotic meats on the menu these days were ostrich and crocodile. They also served lamb, beef, chicken and pork, and a few out of the ordinary offal meats such as ox testicles and chicken liver. For those wondering ox testicles have a very soft, melt in your mouth texture and don't taste half bad!
+
+It was a nice night, a very memorable experience, and the meats we got to eat were generally all very tasty, but had I known I wasn't going to get to eat wildebeest and zebra I probably would have gone somewhere else.
+
+The next morning we stopped again at the Galleria shops for supplies, where I spent the entirety of my free time dealing with ATM shenanigans, trying to get enough shillings to buy the USD I needed to pay for my trip kitty for this leg of the tour. Every single Automatic ATM Machine (trollololol) in the centre was completely empty, right up until about 10 minutes before we were supposed to meet up after I watched the very long process of filling the ATMs by hand from a big sack of cash.
+
+I stayed there and maxed out my limit, before rushing back to the truck hoping I wouldn't be the last person back that everyone was waiting on. I got lucky and we had some extra time because the driver of the cab that Leigh left his phone in the night before was coming to drop it off. I managed to get to a bank and get it changed to USD and was finally able to pay the remaining part of my trip kitty. Such a huge relief after weeks of screwing about trying to obtain it!
+
+Our next stop was Lake Nakuru, where it was raining quite heavily and the campsite had turned to mud. The truck got well bogged as well pulled in and we needed to get a giant tractor to get it pulled out. We took the easy way out that night and 6 of us upgraded to one of the bungalows instead of dealing with tents that night. Apparently it's the rainy season here, which was a shock to us since we were still in the southern hemisphere (ie. Technically winter, although not really cold) and I think most of use though it was going to be dry season everywhere we were going.
+
+We went on another early morning game drive around Lake Nakuru and quickly saw that the heavy rain was not a one-off thing. The lake has been flooding for a long time now and it's banks are well broken, apparently there's nowhere for the water to drain so it just continues to expand, even blocking of the main entrance into the park. There was quite a large forest near the waters edge that was so waterlogged that most of the trees had just plain fallen over, roots and all, and nearly all the flamingos that the lake is famous for are gone because the algae they come to eat is too deep for them to get to now.
+
+We saw a heap of black rhinos, they seemed to be everywhere, which completed the big five for everyone who hadn't already done so.
+
+We saw some giraffes play fighting, bashing their necks but quite slowly and gently compared to when they're out for blood.
+
+We found a lion sleeping on a rock.
+
+But the most memorable part of the morning was the epic bogging that occurred when we tried to pass a large puddle in the road. The first van of our went through  to one side and got stuck. We waited a while and someone came along and gave them a tow out.
+
+The second van in our convoy went in, the exact same path as the first, and predictably got bogged too.
+
+After the drivers had gotten out and wondered how they were going to get the van out, our driver got bored waiting and tried to pass the other side of the puddle. We sped in with the engine redlining, and after a few very aggressive bumps we were out the other side with cheers all round.
 
 
-trouble getting the truck into kenya, carne? papers, changed rego, nmibenan
-made lunch at the border, then people had a game of cricket, which drew a bit of a crowd of truck drivers watching and trying to catch long shots
+Eventually a 4WD by and towed our other van out, so we were all finally past the obstacle, but then the 4WD itself tried to go through the puddle straight through the middle, where unbeknownst to us there was a very, very deep hole, and so it got completely stuck with one wheel floating up in the air. We all got out and sticky-beaked for a while, but since there was nothing we could do to help we went on to finish out game drive.
 
-3 options, leave the truck, pay a bribe, pay a "bond" for the value of the truck
-
-paid bribe, charles negotiated because they were afraid dealing with steve, who's bot a white guy and can look pretty pissed off when he's not happy.
-
-and so from teh very start we were exposed to corruption in kenya, and it wouldnt be the last bribe we needed to pay.
-
-traffic coming into Nairobi was crazy, it took hours to go 20kms. it was so slow, with nowhere to stop, that someone on the truck peed in a bucket
-
-stopped at a supermarket for supplied and dinner, coconut seafood pizza. first impression of the place is that it's like south africa. much more modern and developed.
-
-The next morning back into safari 4wds. pretty disorganised, our driver didnt even know he was driving that day, had to stop to meet his wife to get clothes/stopped in nairobi for disel, but didnt actually fill up.
-
-stopped again in a small town near the masai mara, every petrol station out of diseal.
-
-waited 2 hours for one of the stations to get refueled. apparently one of the cars had been waiting 2 days.
-
-the road into the masai mara was super bumpy and we drove along it at quite high speed. didn't help that our car was 30 years old and felt like the suspension was all original.
-
-brakes failed, then the car wouldnt start. 
-
-drove to the park gate, sorted out a replacement vehicle for the day.
-
-drove straight in to where a leopard was walking around near some bushes. circus of cars, felt like we were getting way too close
-
-after the leopard went into hiding we raced off and briefly saw a cheetah, then shot off again to see 2 lionesses & 6 cubs playing. got right up close again, engines off. up that close it was possible to forget the media circus that you were part of.
-
-rangers arrive, everyone raced off. 10k shilling fine, or about $120
-
-much lower penalties in kenya, compared to tanzania, where the drivers would loose their licence, which is why they're willing to break the rules and go way off road in the masai mara. I'm in two minds, on one hand it felt a bit more Zoo like, or that we were part of some horrible media paparatzi, but if you stayed back on the road you were only penalizing yourself because no-one else was and they'd all get in the way of you seeing anything at all. it was sort of special getting up so close to animals though.
-
-static tents at the campsite, luxury!
-
-Next morning, spotted lions from a long way away, having a go at a bird quite close to where they were the day before. 
-
-big male lion sitting, 2 females eating, fighting a bit over food. 
-
-females stare off, through us
-wildebeast herd in the distance
-one female and the male set off, down a gully and up the other side
-
-chase a few different herds, split them up a bit but dont actually attack
-
-we venture back and find 2 lionesses with cubs with 2 carcuses, both still kicking
-
-one wildebeast got back up
-lions saw somehow, ran it down but other vans obscured our view of the takedown
-
-baby giraffe and mother
-
-hippos in the river
-
-4 cheetah on a rock, long way from road, no one else around, bring back other truck, chase warthog, turned on them
-
-lion sleeping by the waterhole, spotted by leigh
-
-last morning, up early
-
-huge herd of elephants, 40 or so
-
-2 lions eating with 2 cubs, herd of people and a crappy view
-
-lots of driving looking for rhinos, didnt see mcuh
-
-other truck saw a wild dog, very rare, steve (in our truck) very keen to see, offered to pay the fine himself if we go and find it. no luck
-
-drive back to camp 30 minutes early, steve hugely pissed off, drivers telling conflicting lies
-
-drive back to the tarmac felt even longer and bumpier, then back to nairobi long again
-
-new leg, new people joined the group, others left. lost charles, got mash
-
-dinner at carnivore. disappointing, game meat banned in kenya (a long time agao actually), only ostrich and croc, lamb, beef, chicken pork. most out there thigns were ox testicles and chicken liver.
-
-morning at galaria for supplies, ATM shenanigans. every atm empty until 10 minutes before we were supposed to meet up. stayed there and maxed out my limit. extra time because the cab driver leighs phone was left in was coming to drop it off. managed to get it changed to USD and finally had enough to cover the kitty for the rest of the trip, such a relief
-
-Drove to Lake Nakuru, heavy rain, campsite turned to mud and it was quite cold so we got an upgrade. truck bogged
-
-early morning game drive around lake nakuru. lake flooding for a long time now. nowhere to drain. large forest near the waters edge so waterlogged that most of the trees had fallen over, all the flamingos were gone because the algae they eat is too deep here now
-
-saw lots of black rhinos, a lion, and giraffes play fighting bashing necks, but the highlight was the epic bogging
-
-first van went through and got stuck, got towed out. second van went the exact same way, got stuck
-
-our van went the other way, engine redlining, managed to make it to the other side!
-
-4wd came by eventually and towed other van out. then tried to cross through the middle but fell in deep hole, one wheel floating in the air!
-
-crossed the equator into the northern hemisphere! uneventful. weather mostly the sae :P
-
-crossed the border into uganda, no problems getting out of kenya or into Uganda.
-
-
-
+After Nakuru we made our way to the Ugandan border, uneventfully crossing the equator by land for the first time with little perceivable change in the weather even though it was now technically summer :P The border crossing into Uganda was much smoother than the on into Kenya, we paid our money, got our stamps and in we went!
